[gd_scene load_steps=4 format=3 uid="uid://drg5covf2vhj8"]

[ext_resource type="Script" path="res://scenes/ui.gd" id="1_a1wuu"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="4_pooqj"]
[ext_resource type="Texture2D" uid="uid://040ccmi5cn3x" path="res://assets/gfx/shoot.png" id="7_76vfp"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_a1wuu")

[node name="Score" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -39.0
offset_right = 39.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1

[node name="Health" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 152.0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 10

[node name="HealthContainer" type="HBoxContainer" parent="Health"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="TouchButtons" type="CanvasLayer" parent="."]

[node name="Shoot" type="TouchScreenButton" parent="TouchButtons"]
position = Vector2(1240, 680)
scale = Vector2(3, 3)
texture_normal = ExtResource("7_76vfp")
action = "fire"

[node name="Virtual Joystick" parent="TouchButtons" instance=ExtResource("4_pooqj")]
offset_top = -300.0
offset_bottom = 0.0
joystick_mode = 2
action_left = "left"
action_right = "right"
action_up = "up"
action_down = "down"

[node name="Details" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="MeteorSpeed" type="Label" parent="Details"]
layout_mode = 2

[node name="MeteorDelay" type="Label" parent="Details"]
layout_mode = 2

[node name="ShipSpeed" type="Label" parent="Details"]
layout_mode = 2

[node name="ShootCooldown" type="Label" parent="Details"]
layout_mode = 2

[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
